[package]
name = "auto1515"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bon = "3"
derivative = "2"
reqwest = { version = "0.12", features = ["gzip", "cookies"] }
thiserror = "2"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

# tracing
tracing = { version = "0.1", features = ["valuable"] }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "fmt"] }
